@@ -53,7 +53,10 @@ module Qwik
       @config, @memory, @req, @res = config, memory, req, res
     end
 
-    SITE_UPDATE_METHODS = %w(metadata_clear_cache)
+    SITE_UPDATE_METHODS = %w(
+metadata_clear_cache
+archive_clear_cache
+)
     def site_updated
       SITE_UPDATE_METHODS.each {|method|
         if self.respond_to?(method)
