@@ -42,6 +42,8 @@
 
 	* lib/qwik/act-html.rb: Add big page error.
 
+	* lib/qwik/act-archive.rb: Cache archive.
+
 2009-09-02  Kouichirou Eto  <2009@eto.com.nospam.com>
 
 	* lib/qwik/act-metadata.rb: Do not cache SiteMetadata object.
